--- a/Recomendação de Matrícula/manifest.json
+++ b/Recomendação de Matrícula/manifest.json
@@ -8,7 +8,12 @@
 	"browser_action":{
 		"default_popup":"index.html"
 	},
-
+	"content_scripts":[
+		{
+			"matches": ["https://matriculaweb.unb.br/graduacao/*"],
+			"js": ["content.js"]
+		}
+	],
 	"manifest_version":2
 
 
